fix(enketo): remove text color override to fix contrast issues

--- a/webapp/src/css/enketo/medic.less
+++ b/webapp/src/css/enketo/medic.less
@@ -487,23 +487,18 @@
   // Unlike the existing color appearances, these work on all question types, not just summary notes
   .or-appearance-background-red {
     background-color: #e00900;
-    color: #fff;
   }
   .or-appearance-background-green {
     background-color: #75b2b2;
-    color: #fff;
   }
   .or-appearance-background-blue {
     background-color: #6b9acd;
-    color: #fff;
   }
   .or-appearance-background-yellow {
     background-color: #e2b100;
-    color: #fff;
   }
   .or-appearance-background-lime {
     background-color: #b5bd21;
-    color: #fff;
   }
 }
 
